add Ballot Validation
